Fixed unwanted shown vertical scrollbar

--- a/views/css/app.css
+++ b/views/css/app.css
@@ -1,9 +1,3 @@
-@media all and (display-mode: standalone) {
-    body {
-      background-color: yellow;
-    }
-  }
-
 body {
     height: 100vh;
     display: flex;
@@ -18,6 +12,7 @@ body {
     height: 100%;
     margin: auto; /* Forces vertical centering when width or height are less than 100% */
     padding: 0px;
+    overflow: hidden;
 }
 
 #mainVideoTarget {
